update tools in post

--- a/_posts/2022-09-11-工具产品.md
+++ b/_posts/2022-09-11-工具产品.md
@@ -3,4 +3,15 @@ layout: post
 title: 工具产品
 ---
 
-敬请期待。
+简算技术推荐的工具产品
+
+### [DAIBehch](https://github.com/JiansuanTech/DAIBench)
+
+来自滴滴开源的AI评估工具，从云硬件、AI框架到模型层端到端评估。
+
+可以在云（共有/私有）选型、框架选项以及模型选项中作为评估参考。
+需要一定评估成本。
+
+### 其他工具产品
+
+敬请期待
