update post & cname

--- a/_posts/2022-09-11-工具产品.md
+++ b/_posts/2022-09-11-工具产品.md
@@ -7,9 +7,9 @@ title: 工具产品
 
 ### [DAIBehch](https://github.com/JiansuanTech/DAIBench)
 
-来自滴滴开源的AI评估工具，从云硬件、AI框架到模型层端到端评估。
+来自滴滴开源的**AI评估工具**，从云硬件、AI框架到模型层端到端评估。
 
-可以在云（共有/私有）选型、框架选项以及模型选项中作为评估参考。
+可以在**硬件**、**框架**以及**模型**选型中作为评估参考。
 需要一定评估成本。
 
 ### 其他工具产品
