--- a/_posts/2022-09-11-Tools.md
+++ b/_posts/2022-09-11-Tools.md
@@ -9,8 +9,8 @@ Recommended tools:
 
 “DAIBench (DiDi AI Benchmarks) aims to provide a set of **AI evaluation sets** for production environments, spanning different types of GPU servers and cloud environments, to provide users with effective and credible test results for future **hardware selection** , **software and library optimization**, **business model improvement**, link stress testing and other stages to lay a solid data foundation and technical reference.”
 
-A ticpical AI evaluation takes around servel days
+A typical AI evaluation takes about a few days.
 
 ### Other Tools
 
-Coming soon
+Coming soon.
