change jpg to png

--- a/_posts/2022-10-23-Reports.md
+++ b/_posts/2022-10-23-Reports.md
@@ -13,27 +13,27 @@ title: Reports
 
 ### 4090 over V100
 
-<img src="{{ site.baseurl }}/images/4090_over_v100.jpg"/>
+<img src="{{ site.baseurl }}/images/4090_over_v100.png"/>
 
 ### 4090 over A10
 
-<img src="{{ site.baseurl }}/images/4090_over_a10.jpg"/>
+<img src="{{ site.baseurl }}/images/4090_over_a10.png"/>
 
 ### 4090 over A10G
 
-<img src="{{ site.baseurl }}/images/4090_over_a10g.jpg"/>
+<img src="{{ site.baseurl }}/images/4090_over_a10g.png"/>
 
 ### A10G over V100
 
-<img src="{{ site.baseurl }}/images/a10g_over_v100.jpg"/>
+<img src="{{ site.baseurl }}/images/a10g_over_v100.png"/>
 
 ### A10G over A10
 
-<img src="{{ site.baseurl }}/images/a10g_over_a10.jpg"/>
+<img src="{{ site.baseurl }}/images/a10g_over_a10.png"/>
 
 ### A10 over V100
 
-<img src="{{ site.baseurl }}/images/a10_over_v100.jpg"/>
+<img src="{{ site.baseurl }}/images/a10_over_v100.png"/>
 
 
 ## Test result
