hide most detial reports

--- a/_posts/2022-10-23-Reports.md
+++ b/_posts/2022-10-23-Reports.md
@@ -13,30 +13,47 @@ title: Reports
 
 ### 4090 over V100
 
-<img src="{{ site.baseurl }}/images/4090_over_v100.png"/>
+<details>
+    <summary>Show detail</summary>
+    <img src="{{ site.baseurl }}/images/4090_over_v100.png"/>
+</details>
 
 ### 4090 over A10
 
-<img src="{{ site.baseurl }}/images/4090_over_a10.png"/>
+<details open>
+    <summary>Show detail</summary>
+    <img src="{{ site.baseurl }}/images/4090_over_a10.png"/>
+</details>
 
 ### 4090 over A10G
 
-<img src="{{ site.baseurl }}/images/4090_over_a10g.png"/>
+<details>
+    <summary>Show detail</summary>
+    <img src="{{ site.baseurl }}/images/4090_over_a10g.png"/>
+</details>
 
 ### A10G over V100
 
-<img src="{{ site.baseurl }}/images/a10g_over_v100.png"/>
+<details>
+    <summary>Show detail</summary>
+    <img src="{{ site.baseurl }}/images/a10g_over_v100.png"/>
+</details>
 
 ### A10G over A10
 
-<img src="{{ site.baseurl }}/images/a10g_over_a10.png"/>
+<details>
+    <summary>Show detail</summary>
+    <img src="{{ site.baseurl }}/images/a10g_over_a10.png"/>
+</details>
 
 ### A10 over V100
 
-<img src="{{ site.baseurl }}/images/a10_over_v100.png"/>
+<details>
+    <summary>Show detail</summary>
+    <img src="{{ site.baseurl }}/images/a10_over_v100.png"/>
+</details>
 
-
-## Test result
+## Test results
 
 ### NVIDIA GeForce RTX 4090
 
@@ -56,7 +73,7 @@ Note: * means with cudagraph
 ```
 
 ### NVIDIA Tesla A10G
-
+    
 ```sh
 ===================alexnet====================
 Batch	FP32	TF32	FP32*	TF32*	FP16	INT8
@@ -73,7 +90,7 @@ Note: * means with cudagraph
 ```
 
 ### NVIDIA Tesla A10
-
+    
 ```sh
 ===================alexnet====================
 Batch	FP32	TF32	FP32*	TF32*	FP16	INT8
@@ -90,7 +107,7 @@ Note: * means with cudagraph
 ```
 
 ### NVIDIA Tesla V100
-
+    
 ```sh
 ===================alexnet====================
 Batch	FP32	TF32	FP32*	TF32*	FP16	INT8
