inhance report compare to interative style

--- a/_posts/2022-10-23-Reports.md
+++ b/_posts/2022-10-23-Reports.md
@@ -11,47 +11,31 @@ title: Reports
 
 ## Comparation
 
-### 4090 over V100
-
-<details>
-    <summary>Show detail</summary>
-    <img src="{{ site.baseurl }}/images/4090_over_v100.png"/>
-</details>
-
-### 4090 over A10
-
-<details open>
-    <summary>Show detail</summary>
-    <img src="{{ site.baseurl }}/images/4090_over_a10.png"/>
-</details>
-
-### 4090 over A10G
-
-<details>
-    <summary>Show detail</summary>
-    <img src="{{ site.baseurl }}/images/4090_over_a10g.png"/>
-</details>
-
-### A10G over V100
-
-<details>
-    <summary>Show detail</summary>
-    <img src="{{ site.baseurl }}/images/a10g_over_v100.png"/>
-</details>
-
-### A10G over A10
-
-<details>
-    <summary>Show detail</summary>
-    <img src="{{ site.baseurl }}/images/a10g_over_a10.png"/>
-</details>
-
-### A10 over V100
-
-<details>
-    <summary>Show detail</summary>
-    <img src="{{ site.baseurl }}/images/a10_over_v100.png"/>
-</details>
+Compare
+<select id="results1" onchange="show_compare()">
+    <option valuse = "4090" selected>4090</option>
+    <option valuse = "a10g">a10g</option>
+    <option valuse = "a10">a10</option>
+</select>
+over
+<select id="results2" onchange="show_compare()">
+    <option valuse = "a10g">a10g</option>
+    <option valuse = "a10" selected>a10</option>
+    <option valuse = "v100">v100</option>
+</select>
+on
+<select id="model" onchange="show_compare()">
+    <option valuse = "alexnet" >alexnet</option>
+    <option valuse = "googlenet">googlenet</option>
+    <option valuse = "resnet18">resnet18</option>
+    <option valuse = "resnet50" selected>resnet50</option>
+    <option valuse = "resnet101">resnet101</option>
+    <option valuse = "resnet152">resnet152</option>
+    <option valuse = "vgg16">vgg16</option>
+    <option valuse = "vgg19">vgg19</option>
+</select>
+<img id="img" src="{{ site.baseurl }}/images/4090_over_a10_on_resnet50.png">
+ 
 
 ## Test results
 
