--- a/_posts/2022-10-23-Reports.md
+++ b/_posts/2022-10-23-Reports.md
@@ -11,20 +11,19 @@ title: Reports
 
 ## Comparation
 
-Compare
-<select id="results1" onchange="show_compare()">
+<select id="results1" onchange="results1_change()">
     <option valuse = "4090" selected>4090</option>
     <option valuse = "a10g">a10g</option>
     <option valuse = "a10">a10</option>
 </select>
 over
-<select id="results2" onchange="show_compare()">
+<select id="results2">
     <option valuse = "a10g">a10g</option>
     <option valuse = "a10" selected>a10</option>
     <option valuse = "v100">v100</option>
 </select>
 on
-<select id="model" onchange="show_compare()">
+<select id="model">
     <option valuse = "alexnet" >alexnet</option>
     <option valuse = "googlenet">googlenet</option>
     <option valuse = "resnet18">resnet18</option>
@@ -34,6 +33,7 @@ on
     <option valuse = "vgg16">vgg16</option>
     <option valuse = "vgg19">vgg19</option>
 </select>
+<button onclick="show_compare()">Compare</button>
 <img id="img" src="{{ site.baseurl }}/images/4090_over_a10_on_resnet50.png">
  
 
