Update GPU performance table and add cost metrics

--- a/_posts/2025-09-26-Reports.md
+++ b/_posts/2025-09-26-Reports.md
@@ -11,10 +11,10 @@ title: Reports
 
 ## Perf test from AutoDL
 
-| GPU                         | ViT Transformer (FP16) (images/s) | Visualization            |
+| GPU                         | ViT-Transformer-FP16 (images/s) | Visualization            |
 |-----------------------------|-----------------------------------|--------------------------|
 | H800                 | 5815.0                            | ████████████████████████ |
-| 6000 Blackwell      | 5276.0                            | ██████████████████████   |
+| RTX PRO 6000      | 5276.0                            | ██████████████████████   |
 | 5090            | 3806.0                            | ██████████████████       |
 | H20                  | 2263.0                            | ████████████             |
 | 4090            | 2027.0                            | ██████████               |
@@ -36,6 +36,16 @@ title: Reports
 | 1080 Ti         | 165.3                             | █                        |
 | TITAN Xp                    | 146.5                             | █                        |
 | P40                   | 142.2                             | █                        |
+
+## Perf/Cost
+| GPUs                         | ViT-Transformer-FP16 (images/s) |VRAM（GB）|RMB/Hour|Perf/Cost|
+|-----------------------------|-----------------------------------|----|--------|---------|
+| 5090 * 3            | 11418.0                            |96|9.09|1256.1|
+| 4080s-32g * 3            | 5224.8                            |96|4.98|1049.2|
+| 4090 * 4            | 8108.0                            |96|7.92|1023.7|
+| RTX PRO 6000 * 1      | 5276.0                            |96|6.29|838.8|
+| 4090-48g * 2            | 5032.6                           |96|6.06|830.5|
+| H20 * 1                  | 2263.0                            |96|7.35|307.9|
 
 
 
